# python-api-test-automation

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: workflow.yml
api_core/: builder.py  client.py  utils.py
tests/: basic_test.py  conftest.py
utils/: enums.py
