[tool.poetry]
name = "python-api-test-automation"
version = "0.1.0"
description = "Template for API test automation projects using python stack"
authors = ["Yevhen Yeshchev <yyeshchev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
httpx = "^0.23.3"
assertpy = "^1.1"
requests = "^2.28.2"
allure-pytest = "^2.13.1"
black = "^23.1.0"
pytest-parallel = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
